// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Confirmation Component match the snapshot 1`] = `
<Fragment>
  <h1
    className="jsx-1753635690"
  >
    Summary of your application:
  </h1>
  <h5
    className="jsx-1753635690"
  >
    Please review the information you have provided before continuing.
  </h5>
  <br
    className="jsx-1753635690"
  />
  <Relay(ApplicationDetailsComponent)
    application={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_application": true,
          "SubmitApplication_application": true,
        },
        " $refType": "ApplicationWizardConfirmation_application",
        "id": "abc",
        "latestDraftRevision": Object {
          "certificationSignatureIsValid": false,
          "certificationUrl": undefined,
          "versionNumber": 1,
        },
        "rowId": 1,
      }
    }
    liveValidate={true}
    query={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_query": true,
        },
        " $refType": "ApplicationWizardConfirmation_query",
      }
    }
    review={false}
    setHasErrors={[Function]}
  />
  <br
    className="jsx-1753635690"
  />
  <Component />
  <JSXStyle
    id="1753635690"
  >
    .errors{margin-left:20px;padding:20px;background:#ce5c5c;color:white;font-size:20px;}
  </JSXStyle>
</Fragment>
`;

exports[`The Confirmation Component should show a certifier has not yet signed message when hashMatches is true but certificationSignature is null 1`] = `
<Fragment>
  <h1
    className="jsx-1753635690"
  >
    Summary of your application:
  </h1>
  <h5
    className="jsx-1753635690"
  >
    Please review the information you have provided before continuing.
  </h5>
  <br
    className="jsx-1753635690"
  />
  <Relay(ApplicationDetailsComponent)
    application={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_application": true,
          "SubmitApplication_application": true,
        },
        " $refType": "ApplicationWizardConfirmation_application",
        "id": "abc",
        "latestDraftRevision": Object {
          "certificationSignatureIsValid": false,
          "certificationUrl": Object {
            "certificationSignature": undefined,
            "hashMatches": true,
          },
          "versionNumber": 1,
        },
        "rowId": 1,
      }
    }
    liveValidate={true}
    query={
      Object {
        " $fragmentRefs": Object {
          "ApplicationDetailsContainer_query": true,
        },
        " $refType": "ApplicationWizardConfirmation_query",
      }
    }
    review={false}
    setHasErrors={[Function]}
  />
  <br
    className="jsx-1753635690"
  />
  <Component />
  <JSXStyle
    id="1753635690"
  >
    .errors{margin-left:20px;padding:20px;background:#ce5c5c;color:white;font-size:20px;}
  </JSXStyle>
</Fragment>
`;
